# ZPG

./: 2d.fs  2d.vs  3d.fs  3d.vs  CMakeLists.txt  DrawObject.h  application.cpp  application.h  blinn.fs  blinn.vs  buffers.cpp  buffers.h  camera.cpp  camera.h  flashlight.h  lambert.fs  light.h  light.vs  main.cpp  material.h  matrix.cpp  matrix.h  model.cpp  model.h  observer.cpp  observer.h  phong.fs  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  shader_loader.cpp  shader_loader.h  shaders.cpp  shaders.h  skyblox.h  skybox.cpp  skybox.fs  skybox.h
shaders/: 3d.fs  constant_light.fs  constant_light.vs  lambert.fs  light.vs  skybox.vs
